--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -73,11 +73,11 @@
 }
 
 .center>h2 {
-    color: var(--light-bg);
+    color: var(--light-bg-50);
     font-family: "Ranade", Arial, Helvetica, sans-serif;
     font-weight: 300;
     font-size: 1rem;
-    text-align: center;
+    text-align: right;
 }
 
 .center>h1, .loading_container>h1, .loading_container>h2 {
@@ -145,7 +145,8 @@
     }
 
     .center>h2 {
-        text-align: center;
+        text-align: left;
+        margin-left: 1rem;
     }
 }
 
